Kubernetes/EventBus/eventbus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventbus-ingress
  labels:
    name: eventbus-ingress
spec:
  rules:
  - host: eventbus.bookvacation.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: eventbus-service
            port:
              name: management
